Fixing New Nodes Behind Minimap Logic + Relationship error message CSS

--- a/client/src/components/GraphViewerComponent/GraphViewerComponentShared.scss
+++ b/client/src/components/GraphViewerComponent/GraphViewerComponentShared.scss
@@ -67,8 +67,8 @@
     color: black;
   }
   .ms-MessageBar-Relationship {
-    margin-left: -29px;
-    margin-top: 250px;
+    margin-left: -3vh;
+    margin-top: calc(222px + 3vh);
   }
   .div-MessageBar-Relationship {
     height: 50px;
